--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "readmeFilename": "README.md",
   "peerDependencies": {
     "react": "^16.8.1",
-    "react-native": ">=0.60.0-rc.0 <1.0.x",
-    "react-native-validic-session": "1.3.0"
+    "react-native": ">=0.60.0-rc.0 <1.0.x"
   },
   "devDependencies": {
     "react": "^16.9.0",
