--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "readmeFilename": "README.md",
   "peerDependencies": {
     "react": "^16.8.1",
-    "react-native": ">=0.60.0-rc.0 <1.0.x"
+    "react-native": ">=0.60.0-rc.0 <1.0.x",
+    "react-native-validic-session": "https://github.com/yesfit/react-native-validic-session.git"
   },
   "devDependencies": {
     "react": "^16.9.0",
