--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,10 +10,10 @@
 //   original location:
 //   - https://github.com/facebook/react-native/blob/0.58-stable/local-cli/templates/HelloWorld/android/app/build.gradle
 
-def DEFAULT_COMPILE_SDK_VERSION = 28
-def DEFAULT_BUILD_TOOLS_VERSION = '28.0.3'
-def DEFAULT_MIN_SDK_VERSION = 19
-def DEFAULT_TARGET_SDK_VERSION = 28
+def DEFAULT_COMPILE_SDK_VERSION = 30
+def DEFAULT_BUILD_TOOLS_VERSION = '30.0.3'
+def DEFAULT_MIN_SDK_VERSION = 21
+def DEFAULT_TARGET_SDK_VERSION = 30
 
 def safeExtGet(prop, fallback) {
     rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
@@ -33,7 +33,7 @@ buildscript {
             jcenter()
         }
         dependencies {
-            classpath 'com.android.tools.build:gradle:3.4.1'
+            classpath 'com.android.tools.build:gradle:4.1.0'
         }
     }
 }
@@ -77,12 +77,11 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'  // From node_modules
     implementation fileTree(dir: 'libs', include: 'aggregator*.aar')
+    implementation files("$rootDir/../node_modules/react-native-validic-session/android/libs/validicmobile-shared-full-prod-release.aar")
 
-    compileOnly fileTree(dir: 'libs', include: 'validic*.aar')
-
-    implementation 'com.google.android.gms:play-services-fitness:17+'
-    implementation 'com.google.android.gms:play-services-auth:17+'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
+    implementation 'com.google.android.gms:play-services-fitness:18+'
+    implementation 'com.google.android.gms:play-services-auth:18+'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.10"
 
 }
 
