--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-validic-aggregator-fit",
   "title": "React Native Validic Aggregator Fit",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Validic Mobile Google Fit itegration for React Native",
   "main": "index.js",
   "scripts": {
@@ -14,19 +14,19 @@
     "steps"
   ],
   "author": {
-    "name": "Griffin Wilsonm",
+    "name": "Griffin Wilson",
     "email": "griffin.wilson@validic.com"
   },
 
   "licenseFilename": "LICENSE",
   "readmeFilename": "README.md",
   "peerDependencies": {
-    "react": "^16.8.1",
-    "react-native": ">=0.60.0-rc.0 <1.0.x",
+    "react": "*",
+    "react-native": "*",
     "react-native-validic-session": "https://github.com/yesfit/react-native-validic-session.git"
   },
   "devDependencies": {
-    "react": "^16.9.0",
-    "react-native": "^0.61.5"
+    "react": "*",
+    "react-native": ">=60.5"
   }
 }
